@@ -217,6 +217,10 @@ public final class JCASupport {
 			return provider.getService("KeyGenerator", hmac) != null;
 		}
 
+		if (JWEAlgorithm.DIR.equals(alg)) {
+			return true; // Always supported
+		}
+
 		return false;
 	}
 
