@@ -444,4 +444,5 @@ version 4.5 (2015-11-15)
 
 version 4.6 (2015-11-16)
     * Adds X509CertUtils for parsing DER and PEM encoded X.509 certificates.
+    * Ensures JCASupport always treats JWE algorithm 'dir' as supported.
 
